[project]
name = "comfyui-CustomCodeNode"
description = "Provide custom nodes to let you write python code snips directly in ComfyUI web ui."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = [
]

[project.urls]
Repository = "https://github.com/What-a-stupid-username/comfyui-CustomCodeNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "what-a-stupid-username"
DisplayName = "comfyui_CustomCodeNode"
Icon = ""

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
